# Grounding-Zones

./: .gitignore  CONTRIBUTORS.rst  MANIFEST.in  MPI_DEM_ICESat2_ATL03.py  MPI_DEM_ICESat2_ATL06.py  MPI_interpolate_DEM.py  MPI_reduce_ICESat2_ATL03_grounding_zone.py  MPI_reduce_ICESat2_ATL06_grounding_zone.py  README.md  README.rst  copy_scf_ICESat2_files.py  environment.yml  make_GIMP_tile_shapefile.py  make_MPI_DEM_ICESat2_shells.py  make_MPI_reduce_grounding_zone_shells.py  nsidc_convert_GIMP_DEM.py  nsidc_icesat2_sync.py  pgc_arcticdem_sync.py  pgc_rema_sync.py  pyproject.toml  requirements.txt  scp_ICESat2_files.py  scp_scf_ICESat2_files.py  setup.cfg  setup.py
DAC/: aviso_dac_sync.py  calculate_inverse_barometer.py  cds_mslp_sync.py  interp_DAC_ICESat_GLA12.py  interp_DAC_ICESat_GLAH12.py  interp_DAC_icebridge_data.py  interp_IB_response_ICESat2_ATL06.py  interp_IB_response_ICESat2_ATL07.py  interp_IB_response_ICESat2_ATL11.py  interp_IB_response_ICESat_GLA12.py  interp_IB_response_ICESat_GLAH12.py
DEM/: MPI_DEM_ICESat2_ATL03.py  MPI_DEM_ICESat2_ATL06.py  MPI_DEM_ICESat2_ATL11.py  MPI_DEM_ICESat_GLA12.py  MPI_interpolate_DEM.py  check_DEM_ICESat2_ATL06.py  create_GIMP_tile_index.py  gee_pgc_strip_sync.py  interp_ATL14_DEM_ICESat2_ATL06.py  interp_ATL14_DEM_ICESat2_ATL11.py  interp_ATL14_DEM_ICESat_GLA12.py  interp_ATL14_DEM_icebridge_data.py  nsidc_convert_GIMP_DEM.py  pgc_arcticdem_strip_sync.py  pgc_arcticdem_sync.py  pgc_rema_strip_sync.py  pgc_rema_sync.py  scp_pgc_dem_strips.py
GZ/: MPI_reduce_ICESat2_ATL03_grounding_zone.py  MPI_reduce_ICESat2_ATL06_grounding_zone.py  MPI_reduce_ICESat2_ATL11_grounding_zone.py  MPI_reduce_ICESat_GLA12_grounding_zone.py  calculate_GZ_ICESat2_ATL03.py  calculate_GZ_ICESat2_ATL06.py  calculate_GZ_ICESat2_ATL11.py  calculate_GZ_ICESat_GLA12.py  calculate_grounding_zone.py  model_grounding_zone.py
SL/: copernicus_sea_level_sync.py  interp_sea_level_ICESat2_ATL06.py  interp_sea_level_ICESat2_ATL07.py  interp_sea_level_ICESat2_ATL11.py
data/: ant_ice_sheet_islands_v2_buffer_20km.shx
doc/: environment.yml
geoid/: compute_geoid_ICESat2_ATL03.py  compute_geoid_ICESat2_ATL06.py  compute_geoid_ICESat2_ATL07.py  compute_geoid_ICESat2_ATL10.py  compute_geoid_ICESat2_ATL11.py  compute_geoid_ICESat2_ATL12.py  compute_geoid_ICESat_GLA12.py  compute_geoid_icebridge_data.py  interp_EGM2008_ICESat_GLA12.py  interp_EGM2008_icebridge_data.py
grounding_zones/: __init__.py  crs.py  fit.py  mosaic.py  spatial.py  utilities.py  version.py
scripts/: MPI_interpolate_DEM.py  MPI_median_elevation_filter.py  MPI_reduce_ICESat2_ATL03_grounding_zone.py  MPI_reduce_ICESat2_ATL06_grounding_zone.py  MPI_reduce_ICESat2_ATL11_grounding_zone.py  MPI_triangulate_elevation.py  (+34 more)
(+294 files in other folders)
